完成底部布局

--- a/宠物网首页/index.html
+++ b/宠物网首页/index.html
@@ -98,7 +98,13 @@
     </div>
     <!--尾部-->
     <div id="footer">
-
+        <h2>contact us</h2>
+        <ul>
+            <li><img src="img/fb.png"></li>
+            <li><img src="img/g+.png"></li>
+            <li><img src="img/rss.png"></li>
+            <li><img src="img/tw.png"></li>
+        </ul>
     </div>
 
 </body>
